# raspbot-v2-ws

./: .gitignore  Containerfile  LBS_config.json  build.sh  launch.sh
scripts/: build-image.sh  config-container.sh  create-container.sh  enter-container.sh  entrypoint.sh  open-project.sh  push-image.sh  run-container.sh
src/app_bridge/: test.py
src/app_bridge/include/app_bridge/: app-bridge-node.hpp
src/app_bridge/src/: app-bridge-node.cpp
src/camera_node/: CMakeLists.txt  package.xml
src/camera_node/src/: main.cpp
src/camera_node2/: CMakeLists.txt  package.xml
src/camera_node2/src/: main.cpp
src/driver_node/: CMakeLists.txt
src/driver_node/include/: DriverNode.hpp  KinematicsInterface.hpp
src/driver_node/src/: DriverNode.cpp  KinematicsInterface.cpp  main.cpp
src/lcode_localizer/LCodeDecoder/Digitizer/: Digitizer.cpp
src/lcode_localizer/LCodeDecoder/DotDetector/: DotDetector.cpp
src/lcode_localizer/LCodeDecoder/ImgPreprocessor/: ImgPreprocessor.cpp
src/lcode_localizer/LCodeDecoder/LineProcessor/: LineProcessor.cpp
src/lcode_localizer/LCodeDecoder/include/Common/: Line.h
src/lcode_localizer/LCodeDecoder/include/DotDetector/: DotDetector.hpp
src/lcode_localizer/LCodeDecoder/include/ImgPreprocessor/: ImgPreprocessor.hpp
src/lcode_localizer/LCodeDecoder/main/: lcode_localizer_node.cpp
src/lcode_localizer/launch/: bringup.launch.py  robot.launch.py
src/lcode_localizer/params/: lcode_map.yaml  lcode_map_robot.pgm  nav2_params.yaml
src/robot_controller/: package.xml  setup.py
src/robot_controller/robot_controller/: controller_node.py
src/set_goal/: CMakeLists.txt  package.xml
src/set_goal/src/: main.cpp
